--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "block",
-  "terminal.integrated.fontSize": 14
+  "terminal.integrated.fontSize": 14,
+  "editor.wordWrap": "wordWrapColumn"
 }
